--- a/war/proba.css
+++ b/war/proba.css
@@ -26,6 +26,10 @@ h3 {
         font-size: 100%;
         font-weight: bold;
 }
+h13 {
+        font-size: 197%;
+        float: lefr;
+}
 
 p, ol, ul {
         line-height: 170%;
@@ -115,8 +119,8 @@ direction:rtl;
 #menu a {
         display: block;
         float: left;
-        width: 125px;
-        height: 53px;
+        width: 150px;
+        height: 43px;
         padding: 27px 0 0 0;
         background: #A8D7F8 url(images/img02.gif) no-repeat;
         border-left: 2px solid #1777B1;
@@ -211,6 +215,15 @@ direction:rtl;
         margin: 0 auto;
         padding: 30px 0;
 }
+
+/* Order */
+
+#order {
+        float: left;
+        padding-top: 8px;
+}
+
+
 
 /* Content */
 
